--- a/src/DynamoSandbox/DynamoSandbox.csproj
+++ b/src/DynamoSandbox/DynamoSandbox.csproj
@@ -99,6 +99,10 @@
       <Project>{B5F435CB-0D8A-40B1-A4F7-5ECB3CE792A9}</Project>
       <Name>DynamoUtilities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Tools\DynamoInstallDetective\DynamoInstallDetective.csproj">
+      <Project>{98692887-b389-4f73-a71a-9fc516738dab}</Project>
+      <Name>DynamoInstallDetective</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Tools\DynamoShapeManager\DynamoShapeManager.csproj">
       <Project>{263fa9c1-f81e-4a8e-95e0-8cdae20f177b}</Project>
       <Name>DynamoShapeManager</Name>
