--- a/src/ConsoleApplication2/ConsoleApplication2.csproj
+++ b/src/ConsoleApplication2/ConsoleApplication2.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9E6221C5-A627-414C-8B60-3E2477962A8A}</ProjectGuid>
+    <ProjectGuid>{1405011C-64EC-4965-868B-CB72A37C8C9B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DynamoFusion</RootNamespace>
-    <AssemblyName>DynamoFusion</AssemblyName>
+    <RootNamespace>ConsoleApplication2</RootNamespace>
+    <AssemblyName>ConsoleApplication2</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,32 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DynamoApplications">
-      <HintPath>..\..\bin\AnyCPU\Debug\DynamoApplications.dll</HintPath>
-    </Reference>
-    <Reference Include="DynamoCore">
-      <HintPath>..\..\bin\AnyCPU\Debug\DynamoCore.dll</HintPath>
-    </Reference>
-    <Reference Include="DynamoCoreWpf">
-      <HintPath>..\..\bin\AnyCPU\Debug\DynamoCoreWpf.dll</HintPath>
-    </Reference>
-    <Reference Include="DynamoInstallDetective">
+    <Reference Include="DynamoInstallDetective, Version=1.0.1.1190, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\bin\AnyCPU\Debug\DynamoInstallDetective.dll</HintPath>
     </Reference>
-    <Reference Include="DynamoServices">
-      <HintPath>..\..\bin\AnyCPU\Debug\DynamoServices.dll</HintPath>
-    </Reference>
-    <Reference Include="DynamoShapeManager">
-      <HintPath>..\..\bin\AnyCPU\Debug\DynamoShapeManager.dll</HintPath>
-    </Reference>
-    <Reference Include="DynamoUtilities">
-      <HintPath>..\..\bin\AnyCPU\Debug\DynamoUtilities.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Prism">
-      <HintPath>..\..\extern\prism\Microsoft.Practices.Prism.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -67,15 +46,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DynamoCoreSetup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DynamoSandboxWrapper\DynamoSandboxWrapper.csproj">
+      <Project>{933d6db8-651b-467c-aeae-84b78f397604}</Project>
+      <Name>DynamoSandboxWrapper</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
